tdf#121665 ooxmlexport: allow each para to have a column break

The previous logic didn't allow adjacent paragraphs to each have
a column break. For example, if this paragraph has a column break,
then it would ignore writing the postponed paragraph break from
the previous paragraph. In other words, only the last sequential
paragraph would get the column break, and the earlier column breaks
would just be lost.

Introduced a new option, so that this paragraph can write its
postponed break, and also pass on a postponed break to the following
paragraph.

Change-Id: I8afba3470804394f4e0926695e0c11c8e83dff11